--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Viajes</a>
+            <a class="nav-link" href="pages/excursiones.html">Excursiones</a>
           </li>
 
           <li class="nav-item">
