se hacen varios cambios

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a href="#" class="nav-link "> Inicio</a>
             </li>
             <li class="nav-item">
-              <a href="./pages/obras.html" class="nav-link ">Excursiones</a>
+              <a href="./pages/Excursiones.html" class="nav-link ">Excursiones</a>
             </li>
             <li class="nav-item">
               <a href="./pages/servicios.html" class="nav-link ">Galerias</a>
@@ -95,6 +95,7 @@
 
 
   <script src="./codigo.js"></script>
+  <script src="./excursiones.js"></script>
   <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
