se hacen cambios generales

--- a/pages/formaDePago.html
+++ b/pages/formaDePago.html
@@ -76,8 +76,8 @@
 
     <div id="formaDePagoelegida">
 
-  <script src="../codigo.js"></script>  
-  <script src="../excursiones.js"></script>    
+ 
+  <script src="../formaDepago.js"></script>   
   <script src="../js/bootstrap.bundle.min.js"></script>
     
 </body>
