--- a/index.html
+++ b/index.html
@@ -85,17 +85,19 @@
     </div>
   </div>
 
-
-
+  
+  
 
   <div id="adentro"></div>
+  <div id="ciudadEleccion"></div>
 
 
 
 
 
-  <script src="./codigo.js"></script>
-  <script src="./excursiones.js"></script>
+  <script src="./archivos js/codigo.js"></script>
+  <script src="./archivos js/ciudad.js"></script>
+  <script src="./archivos js/excursiones.js"></script>
   <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
