--- a/pages/excursiones.html
+++ b/pages/excursiones.html
@@ -99,8 +99,8 @@
     </div>
 
 
-    <script src="../codigo.js"></script>
-    <script src="../excursiones.js"></script>
+    <script src="../archivos js/codigo.js"></script>
+    <script src="../archivos js/excursiones.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
