--- a/pages/formaDePago.html
+++ b/pages/formaDePago.html
@@ -77,7 +77,7 @@
     <div id="formaDePagoelegida">
 
  
-  <script src="../formaDepago.js"></script>   
+  <script src="../archivos js/formaDepago.js"></script>   
   <script src="../js/bootstrap.bundle.min.js"></script>
     
 </body>
