--- a/pages/formaDePago.html
+++ b/pages/formaDePago.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,77 +9,81 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <title>formaDePago</title>
 </head>
-<body>
 
-    <div class="row">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
-                <img class="logo" src="../imagenes/logo.png" alt="logo empresa">
-                <div class="d-flex flex-grow-1">
-                    <span class="w-100 d-lg-none d-block"> </span>
-                    <a href="#" class="navbar-brand">
-                        <h1>VIENTO SALVAJE</h1>
-                        <p class="subt">Viajar es vivir!!</p>
-                    </a>
-                    <div class="w-100 text-right">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#minavbarboreal">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+<body id="generalPago">
+    <div id="imagenCiudad">
+
+        <div class="row">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container-fluid">
+                    <img class="logo" src="../imagenes/logo.png" alt="logo empresa">
+                    <div class="d-flex flex-grow-1">
+                        <span class="w-100 d-lg-none d-block"> </span>
+                        <a href="#" class="navbar-brand">
+                            <h1>VIENTO SALVAJE</h1>
+                            <p class="subt">Viajar es vivir!!</p>
+                        </a>
+                        <div class="w-100 text-right">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#minavbarboreal">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="collapse navbar-collapse flex-grow-1 text-right" id="minavbarboreal">
+                        <ul class="navbar-nav ms-auto flex-nowrap">
+                            <li class="nav-item">
+                                <a href="../index.html" class="nav-link "> Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="../pages/Excursiones.html" class="nav-link ">Excursiones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./pages/servicios.html" class="nav-link ">Galerias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./pages/clientes.html" class="nav-link ">Conocenos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./pages/contacto.html" class="nav-link ">Contacto</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class="collapse navbar-collapse flex-grow-1 text-right" id="minavbarboreal">
-                    <ul class="navbar-nav ms-auto flex-nowrap">
-                        <li class="nav-item">
-                            <a href="../index.html" class="nav-link "> Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="../pages/Excursiones.html" class="nav-link ">Excursiones</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./pages/servicios.html" class="nav-link ">Galerias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./pages/clientes.html" class="nav-link ">Conocenos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./pages/contacto.html" class="nav-link ">Contacto</a>
-                        </li>
-                    </ul>
+            </nav>
+        </div>
+
+        <!-- COMIENZO SECTOR EXCURSIONES-->
+
+        <div id="excursiones">
+            <div class="card" style="width: 18rem;">
+                <img src="../imagenes/formas de pago/contado.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Contado</h5>
+                    <p class="card-text">Paga el Contado y obtene el mejor precio.</p>
+                    <input type="radio" name="#" id="contado">
                 </div>
             </div>
-        </nav>
-    </div>
-
-    <!-- COMIENZO SECTOR EXCURSIONES-->
-
-    <div id="excursiones">
-        <div class="card" style="width: 18rem;">
-            <img src="../imagenes/formas de pago/contado.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Contado</h5>
-                <p class="card-text">Paga el Contado y obtene el mejor precio.</p>
-                <input type="radio" name="#" id="contado">
+            <div class="card" style="width: 18rem;">
+                <img src="../imagenes/formas de pago/financiado.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">financiado</h5>
+                    <p class="card-text">Paga tu viaje de la mejor manera!.</p>
+                    <input type="radio" name="#" id="cuotas">
+                </div>
             </div>
+
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../imagenes/formas de pago/financiado.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">financiado</h5>
-                <p class="card-text">Paga tu viaje de la mejor manera!.</p>
-                <input type="radio" name="#" id="cuotas">
-            </div>
+
+        <button id="botonseleccionarFormaDePago" class="btn-primary">Seleccionar</button>
+
+        <div id="formaDePagoelegida">
+
+
+            <script src="../archivos js/formaDepago.js"></script>
+            <script src="../js/bootstrap.bundle.min.js"></script>
         </div>
-        
     </div>
-
-    <button id="botonseleccionarFormaDePago" class="btn-primary">Seleccionar</button>
-
-    <div id="formaDePagoelegida">
-
- 
-  <script src="../archivos js/formaDepago.js"></script>   
-  <script src="../js/bootstrap.bundle.min.js"></script>
-    
 </body>
+
 </html>
