--- a/pages/resumen.html
+++ b/pages/resumen.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../partials/styles.css">
-
-    <title>Excursiones</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <title>Document</title>
 </head>
 
+<body id="resumenViaje">
 
-<body id="generalExcursiones">
     <div class="row">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
@@ -36,7 +35,7 @@
                             <a href="../index.html" class="nav-link "> Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./pages/obras.html" class="nav-link ">Excursiones</a>
+                            <a href="../pages/Excursiones.html" class="nav-link ">Excursiones</a>
                         </li>
                         <li class="nav-item">
                             <a href="./pages/servicios.html" class="nav-link ">Galerias</a>
@@ -53,54 +52,11 @@
         </nav>
     </div>
 
-    <!-- COMIENZO SECTOR EXCURSIONES-->
-
-    <div id="excursiones">
-        <div class="card" style="width: 18rem;">
-            <img src="../imagenes/Iruya de noche.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Iruya</h5>
-                <p class="card-text">Veni a Iruya, 269 años de historia.</p>
-                <input type="radio" name="#" id="iruya">
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../imagenes/Purmamarca.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Purmamarca</h5>
-                <p class="card-text">Conoce este pueblo de ensueño!.</p>
-                <input type="radio" name="#" id="purma">
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../imagenes/montaña.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Cerro 7 colores</h5>
-                <p class="card-text">La imagen mas iconica del norte Argentino.</p>
-                <input type="radio" name="#" id="monta">
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../imagenes/Ruta.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Hornocal</h5>
-                <p class="card-text">Vamos a conocer como se vivia hace mil años!!.</p>
-                <input type="radio" name="#" id="horno">
-            </div>
-        </div>
-    </div>
-
-    <button id="seleccionarexcursion" class="btn-primary">Seleccionar</button>
-
-    <div id="excursionelegida">
-            
+    <h1>ACA ESTA EL DETALLE DE TU COMPRA, ESPERAMOS QUE DISFRUTES TU VIAJE Y VUELVAS A ELEGIRNOS</h1>
+    <div id="detalleViaje"></div>
 
 
-    </div>
-
-
-    <script src="../archivos js/codigo.js"></script>
-    <script src="../archivos js/excursiones.js"></script>
+    <script src="../archivos js/formaDepago.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
