--- a/pages/ciudad.html
+++ b/pages/ciudad.html
@@ -31,7 +31,7 @@
                   <a href="#" class="nav-link "> Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a href="../pages/excursiones.html" class="nav-link ">Excursiones</a>
+                  <a href="../pages/paseos.html" class="nav-link ">Excursiones</a>
                 </li>
                 <li class="nav-item">
                   <a href="../pages/servicios.html" class="nav-link ">Galerias</a>
