--- a/pages/mes.html
+++ b/pages/mes.html
@@ -35,7 +35,7 @@
                             <a href="../index.html" class="nav-link "> Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./pages/Excursiones.html" class="nav-link ">Excursiones</a>
+                            <a href="./pages/paseos.html" class="nav-link ">Excursiones</a>
                         </li>
                         <li class="nav-item">
                             <a href="./pages/servicios.html" class="nav-link ">Galerias</a>
