--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     </div>
   </div>
 
-  
-  
+
+
 
   <div id="adentro"></div>
   <div id="ciudadEleccion"></div>
@@ -87,11 +87,11 @@
 
 
 
-
-  <script src="./archivos js/codigo.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="./archivos js/ciudad.js"></script>
   <script src="./archivos js/excursiones.js"></script>
   <script src="./js/bootstrap.bundle.min.js"></script>
+  <script src="./archivos js/codigo.js"></script>
 </body>
 
 </html>
