se mejora el codigo integralmente

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a href="#" class="nav-link "> Inicio</a>
             </li>
             <li class="nav-item">
-              <a href="./pages/Excursiones.html" class="nav-link ">Excursiones</a>
+              <a href="./pages/paseos.html" class="nav-link ">Excursiones</a>
             </li>
             <li class="nav-item">
               <a href="./pages/servicios.html" class="nav-link ">Galerias</a>
