se hacen mejoras en el codigo

--- a/pages/mes.html
+++ b/pages/mes.html
@@ -98,6 +98,7 @@
     <script src="../archivos js/mes.js"></script>
     <script src="../archivos js/ciudad.js"></script>
     <script src="../archivos js/excursiones.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
