--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -93,12 +93,12 @@
     <button id="seleccionarexcursion" class="btn-primary">Seleccionar</button>
 
     <div id="excursionelegida">
-            
+
 
 
     </div>
 
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../archivos js/codigo.js"></script>
     <script src="../archivos js/excursiones.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
