se hacen cambios

--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -61,6 +61,7 @@
             <div class="card-body">
                 <h5 class="card-title">Iruya</h5>
                 <p class="card-text">Veni a Iruya, 269 años de historia.</p>
+                <span>Precio $14500</span>
                 <input type="radio" name="#" id="iruya">
             </div>
         </div>
@@ -69,6 +70,7 @@
             <div class="card-body">
                 <h5 class="card-title">Purmamarca</h5>
                 <p class="card-text">Conoce este pueblo de ensueño!.</p>
+                <span>Precio $5520</span>
                 <input type="radio" name="#" id="purma">
             </div>
         </div>
@@ -77,6 +79,7 @@
             <div class="card-body">
                 <h5 class="card-title">Cerro 7 colores</h5>
                 <p class="card-text">La imagen mas iconica del norte Argentino.</p>
+                <span>Precio $4800</span>
                 <input type="radio" name="#" id="monta">
             </div>
         </div>
@@ -85,6 +88,7 @@
             <div class="card-body">
                 <h5 class="card-title">Hornocal</h5>
                 <p class="card-text">Vamos a conocer como se vivia hace mil años!!.</p>
+                <span>Precio $9500</span>
                 <input type="radio" name="#" id="horno">
             </div>
         </div>
