se completa el codigo para entrega

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 
 
   <!-- inicio de cuerpo y pagina de acceso-->
+
+
+
   <div id="saludo">
     <h1 id="mensaje"> BIENVENIDOS A VIENTO SALVAJE, INGRESA CON TU NOMBRE Y APELLIDO Y VIVI EL VIAJE DE TU VIDA</h1>
   </div>
@@ -74,21 +77,24 @@
       <input type="text" name="Apellido" id="apellido" placeholder="Ingresa tu apellido">
       <div id="entrar">
         <button id="ingresar">INGRESAR</button>
+       
       </div>
+      
     </div>
+   
   </div>
+  
 
-
-
-
+ 
   <div id="adentro"></div>
   <div id="ciudadEleccion"></div>
 
 
-  
 
+ 
 
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="./archivos js/apiDolar.js"></script>
   <script src="./archivos js/ciudad.js"></script>
   <script src="./archivos js/excursiones.js"></script>
   <script src="./js/bootstrap.bundle.min.js"></script>
