--- a/pages/formaDePago.html
+++ b/pages/formaDePago.html
@@ -50,10 +50,13 @@
                         </ul>
                     </div>
                 </div>
+              
             </nav>
         </div>
 
         <!-- COMIENZO SECTOR EXCURSIONES-->
+        <div id="divDolar"></div>
+
 
         <div id="excursiones">
             <div class="card" style="width: 18rem;">
@@ -78,14 +81,16 @@
         <button id="botonseleccionarFormaDePago" class="btn-primary">Seleccionar</button>
 
         <div id="formaDePagoelegida"> </div>
-        <div id="botonResumen">
 
 
+        
 
-            <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-            <script src="../archivos js/formaDepago.js"></script>
-            <script src="../js/bootstrap.bundle.min.js"></script>
-        </div>
+
+    </div>
+    <script src="../archivos js/apiDolar.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../archivos js/formaDepago.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
 </body>
 
